    (Point 1 of apport-better-retracing spec). Bump python-apport dependency.
  * apport/packaging.py: Add interface get_available_version(package).
  * backends/packaging-apt-dpkg.py: Implement get_available_version(), add
    shallow test case.
  * apport/report.py: Add function obsolete_packages() to return packages in
    Package: and Depends: which are not up to date. Add test cases.
  * apport/ui.py, thread_collect_info(): call standard_title() and add it to
    the report as 'Title' field. This is useful if reporters modify the
    default title (per request of Brian Murray, thanks). Add test case.
  * apport/ui.py: Fix declaration of the test suite's
    ui_set_upload_progress(). Funny that this has never been triggered before.
  * apport/report.py, add_gdb_info(): Split out StacktraceTop generation into
    separate funtion _gen_stacktrace_top(), so that we can test it separately.
  * apport/report.py, _gen_stacktrace_top(): Step back from the crashed
    program's own signal handlers, since those are generally not useful for
    the purposes of StacktraceTop and only impede duplicate matching
    (part of apport-better-retracing spec). Add various test cases.
  * apport/report.py: Add method crash_signature() to calculate an unique
    identifier of a signal or Python crash, to be used for duplicate
    detection. Add various test cases.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 03 Jun 2007 14:02:34 +0200

apport (0.81) gutsy; urgency=low

  * apport/report.py: Remove '[apport]' default bug title prefix. (LP: #94819)
  * apport/crashdb_impl/launchpad.py: Tag new bugs with
    'apport-<problemtype>'. This replaces the former '[apport]' prefixing.
  * debian/local/setup-apport-retracer: Specify a path in '.' command and
    use sh again. Yay for me needing three attempts before actually RTFMing
    how '.' works (which is really nasty and strange IMHO).
  * bin/apport-chroot: Fix symlinks before repackaging the chroot tarball in